--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,8 @@
     <title>Kind Khalid Host</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body> <img src="/images/logo.png" alt="King Khalid Host Logo" class="logo">
+    
     <div class="container">
         <img src="logo.png" alt="Kind Khalid Host Logo" class="logo">
         <h1>Kind Khalid Host</h1>
